Fix postbuild script: use cpx for cross-platform copy (404.html)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "postbuild": "copy dist\\index.html dist\\404.html",
+    "postbuild": "cpx dist/index.html dist/404.html",
     "predeploy": "npm run build && npm run postbuild",
     "deploy": "gh-pages -d dist"
   },
@@ -73,6 +73,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "cpx": "^1.5.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
